--- a/KeyScan.vcxproj
+++ b/KeyScan.vcxproj
@@ -102,6 +102,12 @@
     <None Include="KeyScan.ico" />
     <ResourceCompile Include="KeyScan.rc" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="resource.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="KeyScan.png" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
     <Import Project="$(QtMsBuild)\qt.targets" />
