--- a/KeyScan.vcxproj
+++ b/KeyScan.vcxproj
@@ -99,7 +99,6 @@
     <ClCompile Include="main.cpp" />
     <None Include=".gitignore" />
     <None Include="issues.md" />
-    <None Include="KeyScan.ico" />
     <ResourceCompile Include="KeyScan.rc" />
   </ItemGroup>
   <ItemGroup>
@@ -108,6 +107,7 @@
     <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="KeyScan.ico" />
     <Image Include="KeyScan.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
